--- a/kaggle/PGS4_ep5/1.data_processing.ipynb
+++ b/kaggle/PGS4_ep5/1.data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "id": "a0f9d649-8418-4a4f-9829-9cd30d126fdf",
    "metadata": {},
    "outputs": [
@@ -23,6 +23,7 @@
     "import sys, os\n",
     "import pickle as pkl\n",
     "import dproc\n",
+    "from functools import partial\n",
     "\n",
     "print(sys.version)\n",
     "\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "3a4c456a-5477-416f-b2ce-74f702cff065",
    "metadata": {},
    "outputs": [],
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "id": "edb60013-9ede-4981-b599-090056af9bdc",
    "metadata": {},
    "outputs": [
@@ -261,7 +262,7 @@
        "WetlandLoss                                     org"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "6c4a5212-9a87-4b3d-9ba9-5957ff07560c",
+   "execution_count": 4,
+   "id": "aae42744-daaa-43dd-88fe-4912d312560a",
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +731,7 @@
        "id                               False  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "id": "bdc7e189-8f7f-48d4-bca3-5989e00e457b",
    "metadata": {},
    "outputs": [],
@@ -759,6 +760,82 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db7f3efe-98e3-4faf-9be7-fd02e5dfe108",
+   "metadata": {},
+   "source": [
+    "[Sorting along the feature axis as \"feature engineering\"](https://www.kaggle.com/competitions/playground-series-s4e5/discussion/499579)\n",
+    "\n",
+    "각 변수별 소트한 결과가 의미있는 성능 향상을 보일 수 있다고 합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "11c4467b-f056-4c99-8cb4-a64c816149f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfl_train = pl.read_csv(files['train'], dtypes=dtypes)\n",
+    "dprocs = list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6b077893-772c-482a-9d8b-4a417b8b5b63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_num_org= df_var.loc[~df_var.index.isin(['id', 'FloodProbability']) & (df_var['src'] == 'org')].index.tolist()\n",
+    "row_wise_sort = lambda x: x.select(\n",
+    "    pl.concat_list(cs.by_name(X_num_org)).list.sort().list.to_struct().alias('s')\n",
+    ").unnest('s').rename(lambda x: 'sort' + '_'+ x.split('_')[1])\n",
+    "\n",
+    "dprocs.append(partial(\n",
+    "    dproc.select_opr, \n",
+    "    select_proc=row_wise_sort, \n",
+    "    desc=[('sort_{}'.format(i), '원래 입력변수 중에서 {} 번째로 작은 수'.format(i + 1)) for i in range(len(X_num_org))],\n",
+    "    src='sort'\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff7ec657-8adb-48e4-89d8-71efdaeba061",
+   "metadata": {},
+   "source": [
+    "[PSS4E5 EDA which makes sense ⭐️⭐️⭐️⭐️⭐️](https://www.kaggle.com/code/ambrosm/pss4e5-eda-which-makes-sense) 에서, \n",
+    "\n",
+    "변수의 합 만으로도 연관성이 속성을 만들어 낼 수 있다고 합니다. \n",
+    "\n",
+    "먼저 선형 회귀 모델을 만들어보고 잔차를 출력해 봅니다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "df3605f9-e96c-4038-9cf2-f38e5e5ebb63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with_columns = [\n",
+    "    ('s_values', 's_values', pl.fold(acc=pl.lit(0), function=lambda acc, x: acc + x, exprs=cs.by_name(X_num_org)), \"제공된 모든변수의 합을 만듭니다.\")\n",
+    "]\n",
+    "dprocs.append(partial(dproc.with_columns_opr, proc_list=with_columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "88a3209e-aae8-4f3b-be47-ece13388af66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfl_train, df_var = dproc.apply_procs(dfl_train, dprocs, df_var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a60d170b-ea8e-4907-9500-36ce5d9a2760",
    "metadata": {},
    "source": [
@@ -767,17 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "11c4467b-f056-4c99-8cb4-a64c816149f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfl_train = pl.read_csv(files['train'], dtypes=dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "id": "5ba7912c-758d-4b65-b8b1-c94fea509e63",
    "metadata": {},
    "outputs": [],
@@ -789,13 +856,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "id": "67222539-d23b-41df-9190-5eee0400342c",
    "metadata": {},
    "outputs": [],
    "source": [
     "dfl_org = pl.read_csv(files['org'], dtypes=dtypes)\n",
     "dfl_org = dfl_org.with_columns(id=-pl.int_range(0, pl.len()) - 1)\n",
+    "dfl_org, _ = dproc.apply_procs(dfl_org, dprocs)\n",
     "\n",
     "df_org = dfl_org.to_pandas().set_index('id')\n",
     "del dfl_org\n",
@@ -804,12 +872,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "id": "4540fb6a-39d1-421b-bd3e-ab336d74224a",
    "metadata": {},
    "outputs": [],
    "source": [
     "dfl_test = pl.read_csv(files['test'], dtypes=dtypes)\n",
+    "dfl_test, _ = dproc.apply_procs(dfl_test, dprocs)\n",
     "\n",
     "df_test = dfl_test.to_pandas().set_index('id')\n",
     "del dfl_test\n",
@@ -818,21 +887,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "id": "7039f643-4ca8-4bf1-b35c-dbd66a5a1486",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_var.to_pickle(files['var_pkl'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec8ecdce-4b32-47ca-a0c5-163b05124744",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
