--- a/kaggle/PGS4_ep5/1.data_processing.ipynb
+++ b/kaggle/PGS4_ep5/1.data_processing.ipynb
@@ -12,12 +12,14 @@
      "text": [
       "3.12.3 (main, May  7 2024, 08:28:12) [GCC 9.4.0]\n",
       "pandas 2.2.2\n",
-      "polars 0.20.24\n"
+      "polars 0.20.24\n",
+      "numpy 1.26.4\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import polars as pl\n",
     "import polars.selectors as cs\n",
     "import sys, os\n",
@@ -27,7 +29,7 @@
     "\n",
     "print(sys.version)\n",
     "\n",
-    "for i in [pd, pl]:\n",
+    "for i in [pd, pl, np]:\n",
     "    print(i.__name__, i.__version__)"
    ]
   },
@@ -781,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6b077893-772c-482a-9d8b-4a417b8b5b63",
    "metadata": {},
    "outputs": [],
@@ -813,20 +815,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "df3605f9-e96c-4038-9cf2-f38e5e5ebb63",
    "metadata": {},
    "outputs": [],
    "source": [
     "with_columns = [\n",
-    "    ('s_values', 's_values', pl.fold(acc=pl.lit(0), function=lambda acc, x: acc + x, exprs=cs.by_name(X_num_org)), \"제공된 모든변수의 합을 만듭니다.\")\n",
+    "    ('s_values', 's_values', pl.fold(acc=pl.lit(0), function=lambda acc, x: acc + x, exprs=cs.by_name(X_num_org)), \"제공된 모든변수의 합을 만듭니다.\"),\n",
+    "    ('s_values', 's_values2', pl.fold(acc=pl.lit(0), function=lambda acc, x: acc + (x ** 2), exprs=cs.by_name(X_num_org)), \"제공된 모든변수의 제곱 수의 합을 만듭니다.\")\n",
     "]\n",
     "dprocs.append(partial(dproc.with_columns_opr, proc_list=with_columns))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "88a3209e-aae8-4f3b-be47-ece13388af66",
    "metadata": {},
    "outputs": [],
@@ -844,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5ba7912c-758d-4b65-b8b1-c94fea509e63",
    "metadata": {},
    "outputs": [],
@@ -856,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "67222539-d23b-41df-9190-5eee0400342c",
    "metadata": {},
    "outputs": [],
@@ -872,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "4540fb6a-39d1-421b-bd3e-ab336d74224a",
    "metadata": {},
    "outputs": [],
@@ -887,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "7039f643-4ca8-4bf1-b35c-dbd66a5a1486",
    "metadata": {},
    "outputs": [],
