--- a/kaggle/PGS4_ep5/1.data_processing.ipynb
+++ b/kaggle/PGS4_ep5/1.data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a0f9d649-8418-4a4f-9829-9cd30d126fdf",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3a4c456a-5477-416f-b2ce-74f702cff065",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "edb60013-9ede-4981-b599-090056af9bdc",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "WetlandLoss                                     org"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "aae42744-daaa-43dd-88fe-4912d312560a",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
        "id                               False  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "bdc7e189-8f7f-48d4-bca3-5989e00e457b",
    "metadata": {},
    "outputs": [],
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "11c4467b-f056-4c99-8cb4-a64c816149f7",
    "metadata": {},
    "outputs": [],
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6b077893-772c-482a-9d8b-4a417b8b5b63",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "df3605f9-e96c-4038-9cf2-f38e5e5ebb63",
    "metadata": {},
    "outputs": [],
@@ -828,8 +828,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "693f6719-43fb-4226-b263-83c220d0b931",
+   "metadata": {},
+   "source": [
+    "[PSS4E5 EDA which makes sense ⭐️⭐️⭐️⭐️⭐️](https://www.kaggle.com/code/ambrosm/pss4e5-eda-which-makes-sense)의 Advanced models with feature engineering에서\n",
+    "제안한 속성 추가."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
+   "id": "6bcfdac6-8e35-438a-bbe1-73a93c608c12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dprocs.append(\n",
+    "    partial(dproc.with_columns_opr, \n",
+    "            proc_list=[('special', 'special1', pl.col('s_values').is_in([72, 73, 74, 75]), \n",
+    "                     's_values와 floodprobability와 선형 관계에 의한 floodprobability 예상치 보다 유달리 높은 구간에 속하는 여부')]\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "88a3209e-aae8-4f3b-be47-ece13388af66",
    "metadata": {},
    "outputs": [],
@@ -847,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "5ba7912c-758d-4b65-b8b1-c94fea509e63",
    "metadata": {},
    "outputs": [],
@@ -859,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "67222539-d23b-41df-9190-5eee0400342c",
    "metadata": {},
    "outputs": [],
@@ -875,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "4540fb6a-39d1-421b-bd3e-ab336d74224a",
    "metadata": {},
    "outputs": [],
@@ -890,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "7039f643-4ca8-4bf1-b35c-dbd66a5a1486",
    "metadata": {},
    "outputs": [],
