--- a/kaggle/PGS4_ep6/1.data processing.ipynb
+++ b/kaggle/PGS4_ep6/1.data processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "51055f11-6b4f-4553-b4ab-7eaf7f054953",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "6e28268a-ab94-457e-8fb8-8f9900945780",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "3fbfb48d-ff66-48c0-93e1-9a1caa424576",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "e3a46d26-29ec-4f6c-89e0-f7d74df4779d",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "83d36376-f9b7-4220-9fdc-32c5568aed79",
    "metadata": {},
    "outputs": [
@@ -662,7 +662,7 @@
        "Target                                          Categorical  org  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "582c8a75-fb04-4e24-a7dd-9fea4abe736a",
    "metadata": {},
    "outputs": [],
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "85115397-634e-4775-af2a-04a94db2b245",
    "metadata": {},
    "outputs": [],
@@ -703,13 +703,14 @@
     "ord_enc = OrdinalEncoder()\n",
     "dprocs = list()\n",
     "dprocs.append(\n",
-    "    partial(dproc.apply_processor, processor=ord_enc, X_val=X_cat, info_prov=dproc.ord_prov, df_feat=df_var_type)\n",
+    "    partial(dproc.apply_processor, processor=ord_enc, X_val=X_cat, \n",
+    "            info_prov=partial(dproc.ord_prov, suffix='_o'), df_feat=df_var_type)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "eba6f687-7961-4a8b-886e-5179cc1c19c7",
    "metadata": {},
    "outputs": [],
@@ -727,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "76c9ef7e-412c-43eb-955c-1339a3a69a9b",
    "metadata": {},
    "outputs": [],
@@ -738,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "124fdfcb-cb19-4808-a87e-d46edc1efc2f",
    "metadata": {},
    "outputs": [],
@@ -748,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "id": "d09fefd2-6ce7-42ef-a2a8-fc9fb61a0279",
    "metadata": {},
    "outputs": [],
@@ -760,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "20a2b2ad-dda6-4113-b830-6d12967b16a6",
    "metadata": {},
    "outputs": [],
@@ -770,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "9d7f208c-15c4-4772-aa57-d621a6467aa2",
    "metadata": {},
    "outputs": [],
@@ -782,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "0115bd78-61a1-40f4-a467-07107c1c395a",
    "metadata": {},
    "outputs": [],
