--- a/kaggle/PGS4_ep6/1.data processing.ipynb
+++ b/kaggle/PGS4_ep6/1.data processing.ipynb
@@ -22,7 +22,7 @@
     "import numpy as np\n",
     "import polars as pl\n",
     "import polars.selectors as cs\n",
-    "import sys, os\n",
+    "import sys, os, re\n",
     "import pickle as pkl\n",
     "import dproc\n",
     "from functools import partial\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "6e28268a-ab94-457e-8fb8-8f9900945780",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "3fbfb48d-ff66-48c0-93e1-9a1caa424576",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "e3a46d26-29ec-4f6c-89e0-f7d74df4779d",
    "metadata": {},
    "outputs": [],
@@ -111,16 +111,13 @@
     "])\n",
     "X_cat= ['Marital status', 'Application mode', 'Course', 'Nacionality', \"Mother's occupation\", \"Father's occupation\"]\n",
     "dt = dproc.get_type_pl(\n",
-    "    df_type, \n",
-    "    {'id': pl.Int64, \n",
-    "        **{i: pl.Categorical for i in X_cat}\n",
-    "    }\n",
+    "    df_type\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "83d36376-f9b7-4220-9fdc-32c5568aed79",
    "metadata": {},
    "outputs": [
@@ -169,7 +166,7 @@
        "      <td>Integer</td>\n",
        "      <td>Marital status</td>\n",
        "      <td>1 – single 2 – married 3 – widower 4 – divorce...</td>\n",
-       "      <td>Categorical</td>\n",
+       "      <td>Int8</td>\n",
        "      <td>org</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -178,7 +175,7 @@
        "      <td>Integer</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1 - 1st phase - general contingent 2 - Ordinan...</td>\n",
-       "      <td>Categorical</td>\n",
+       "      <td>Int8</td>\n",
        "      <td>org</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -196,7 +193,7 @@
        "      <td>Integer</td>\n",
        "      <td>NaN</td>\n",
        "      <td>33 - Biofuel Production Technologies 171 - Ani...</td>\n",
-       "      <td>Categorical</td>\n",
+       "      <td>Int16</td>\n",
        "      <td>org</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -232,7 +229,7 @@
        "      <td>Integer</td>\n",
        "      <td>Nationality</td>\n",
        "      <td>1 - Portuguese; 2 - German; 6 - Spanish; 11 - ...</td>\n",
-       "      <td>Categorical</td>\n",
+       "      <td>Int8</td>\n",
        "      <td>org</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -259,7 +256,7 @@
        "      <td>Integer</td>\n",
        "      <td>Occupation</td>\n",
        "      <td>0 - Student 1 - Representatives of the Legisla...</td>\n",
-       "      <td>Categorical</td>\n",
+       "      <td>Int16</td>\n",
        "      <td>org</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -268,7 +265,7 @@
        "      <td>Integer</td>\n",
        "      <td>Occupation</td>\n",
        "      <td>0 - Student 1 - Representatives of the Legisla...</td>\n",
-       "      <td>Categorical</td>\n",
+       "      <td>Int16</td>\n",
        "      <td>org</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -623,18 +620,18 @@
        "\n",
        "                                                       type  src  \n",
        "name                                                              \n",
-       "Marital status                                  Categorical  org  \n",
-       "Application mode                                Categorical  org  \n",
+       "Marital status                                         Int8  org  \n",
+       "Application mode                                       Int8  org  \n",
        "Application order                                      Int8  org  \n",
-       "Course                                          Categorical  org  \n",
+       "Course                                                Int16  org  \n",
        "Daytime/evening attendance                             Int8  org  \n",
        "Previous qualification                                 Int8  org  \n",
        "Previous qualification (grade)                      Float32  org  \n",
-       "Nacionality                                     Categorical  org  \n",
+       "Nacionality                                            Int8  org  \n",
        "Mother's qualification                                 Int8  org  \n",
        "Father's qualification                                 Int8  org  \n",
-       "Mother's occupation                             Categorical  org  \n",
-       "Father's occupation                             Categorical  org  \n",
+       "Mother's occupation                                   Int16  org  \n",
+       "Father's occupation                                   Int16  org  \n",
        "Admission grade                                     Float32  org  \n",
        "Displaced                                              Int8  org  \n",
        "Educational special needs                              Int8  org  \n",
@@ -662,7 +659,7 @@
        "Target                                          Categorical  org  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "582c8a75-fb04-4e24-a7dd-9fea4abe736a",
    "metadata": {},
    "outputs": [],
@@ -694,7 +691,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
+   "id": "6d003b33-e02e-4457-9240-d1ec78b76cd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_cat_values(var_name):\n",
+    "    return pd.Series(re.split(\"(?P<no>[0-9]+ - )\", df_var.loc[var_name, \"Description\"])[1:])\\\n",
+    "    .rename(index=lambda x: 'no' if x % 2 == 0 else 'desc').rename('var').reset_index().assign(\n",
+    "        item=lambda x: x.index // 2,\n",
+    "    ).pivot(index='item', columns='index', values='var')\\\n",
+    "    .assign(\n",
+    "        no=lambda x: x['no'].str.slice(0, -3),\n",
+    "    )['no'].astype('int').values\n",
+    "cat_to_arrage = ['Application mode', 'Course', 'Previous qualification', \"Mother's qualification\", \"Father's qualification\", \"Mother's occupation\", \"Father's occupation\", \"Nacionality\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "85115397-634e-4775-af2a-04a94db2b245",
    "metadata": {},
    "outputs": [],
@@ -702,15 +717,23 @@
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "ord_enc = OrdinalEncoder()\n",
     "dprocs = list()\n",
+    "\n",
+    "filter_cat_val = lambda x: x.select(\n",
+    "    *[pl.when(pl.col(i).is_in(get_cat_values(i))).then(i).otherwise(-1) for i in cat_to_arrage]\n",
+    ")\n",
+    "desc = [('filter_{}'.format(i) , 'i: 설명에 등장하지 않은 변수를 -1로 치환합니다') for i in cat_to_arrage]\n",
+    "dprocs.append(\n",
+    "    partial(dproc.select_opr, select_proc=filter_cat_val, src='filtering_cat_val', desc=desc, df_feat=df_var_type)\n",
+    ")\n",
     "dprocs.append(\n",
     "    partial(dproc.apply_processor, processor=ord_enc, X_val=X_cat, \n",
-    "            info_prov=partial(dproc.ord_prov, suffix='_o'), df_feat=df_var_type)\n",
+    "            info_prov=partial(dproc.ord_prov, suffix='_o'), df_feat=df_var_type),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "eba6f687-7961-4a8b-886e-5179cc1c19c7",
    "metadata": {},
    "outputs": [],
@@ -728,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "76c9ef7e-412c-43eb-955c-1339a3a69a9b",
    "metadata": {},
    "outputs": [],
@@ -739,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "124fdfcb-cb19-4808-a87e-d46edc1efc2f",
    "metadata": {},
    "outputs": [],
@@ -749,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "d09fefd2-6ce7-42ef-a2a8-fc9fb61a0279",
    "metadata": {},
    "outputs": [],
@@ -761,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "20a2b2ad-dda6-4113-b830-6d12967b16a6",
    "metadata": {},
    "outputs": [],
@@ -771,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "9d7f208c-15c4-4772-aa57-d621a6467aa2",
    "metadata": {},
    "outputs": [],
@@ -783,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "0115bd78-61a1-40f4-a467-07107c1c395a",
    "metadata": {},
    "outputs": [],
@@ -797,6 +820,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b0ab2468-4228-48ad-b756-90735a1dd90a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d14a75c6-ba6d-4b0b-bbbc-f1240ad913c6",
    "metadata": {},
    "outputs": [],
    "source": []
