--- a/kaggle/PGS4_ep5/1.data_processing.ipynb
+++ b/kaggle/PGS4_ep5/1.data_processing.ipynb
@@ -878,7 +878,8 @@
    "source": [
     "df_train = dfl_train.to_pandas().set_index('id')\n",
     "del dfl_train\n",
-    "df_train.to_pickle(files['train_pkl'])"
+    "df_train.to_pickle(files['train_pkl'])\n",
+    "del df_train"
    ]
   },
   {
@@ -894,7 +895,8 @@
     "\n",
     "df_org = dfl_org.to_pandas().set_index('id')\n",
     "del dfl_org\n",
-    "df_org.to_pickle(files['org_pkl'])"
+    "df_org.to_pickle(files['org_pkl'])\n",
+    "del df_org"
    ]
   },
   {
@@ -909,7 +911,8 @@
     "\n",
     "df_test = dfl_test.to_pandas().set_index('id')\n",
     "del dfl_test\n",
-    "df_test.to_pickle(files['test_pkl'])"
+    "df_test.to_pickle(files['test_pkl'])\n",
+    "del df_test"
    ]
   },
   {
@@ -919,7 +922,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_var.to_pickle(files['var_pkl'])"
+    "df_var.to_pickle(files['var_pkl'])\n",
+    "del df_var"
    ]
   },
   {
