--- a/kaggle/PGS4_ep7/1. data_processing.ipynb
+++ b/kaggle/PGS4_ep7/1. data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "69689385-840c-4cd4-9cbb-04ca552ded31",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "eabd70ce-3e45-48da-880b-077b208fdea6",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "14544377-11b0-40cd-a15e-fa1b13f02307",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "4  0 for customer not having vehicle insurance, 1...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "afeaa025-c75c-4378-a4ce-c50f1ab18d81",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "adb9de8b-5670-4e72-a704-76c5e2247678",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "Response (Dependent Feature)   NaN   NaN    NaN    NaN          NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "ac3f7682-9524-43fa-9f1c-fc0b366b6a97",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "5c2a2222-bb31-4ea8-ba6d-4f5c6cf9b51f",
    "metadata": {},
    "outputs": [],
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "eb701f83-5497-4135-806a-fbf90f2f89d9",
    "metadata": {},
    "outputs": [],
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "9318f891-8a8a-4f87-918f-10aa5449b11d",
    "metadata": {},
    "outputs": [],
@@ -545,6 +545,10 @@
     "df_train['Policy_Sales_Channel'] = dproc.replace_cat(df_train['Policy_Sales_Channel'], lambda x: float(x))\n",
     "df_train['Policy_Sales_Channel'] = df_train['Policy_Sales_Channel'].cat.as_ordered()\n",
     "\n",
+    "df_train['Region_Code_S'] = dproc.replace_cat(df_train['Region_Code'], lambda x: str(x))\n",
+    "df_train['Policy_Sales_Channel_S'] = dproc.replace_cat(df_train['Policy_Sales_Channel'], lambda x: str(x))\n",
+    "df_train['Annual_Premium_S'] = dproc.replace_cat(df_train['Annual_Premium_c'], lambda x: str(x))\n",
+    "\n",
     "df_var = pd.concat([\n",
     "    df_var, \n",
     "    dproc.get_type_vars([\n",
@@ -553,12 +557,22 @@
     "        ('categorize', df_train['Vintage_c'], 'Vintange를 범주화', 'Categorical')\n",
     "    ])\n",
     "], axis=0)\n",
-    "cat_dtypes = {i: df_train[i].dtype for i in ['Annual_Premium_c', 'Age_c', 'Vintage_c'] + df_var.loc[df_var['dtype'] == 'Categorical'].index.tolist()}"
+    "\n",
+    "df_var = pd.concat([\n",
+    "    df_var, \n",
+    "    dproc.get_type_vars([\n",
+    "        ('categorize', df_train['Region_Code_S'], 'Region_Code_S 문자형 범주화', 'Categorical'),\n",
+    "        ('categorize', df_train['Policy_Sales_Channel_S'], 'Policy_Sales_Channel 범주화', 'Categorical'),\n",
+    "        ('categorize', df_train['Annual_Premium_S'], 'Annual_Premium 범주화', 'Categorical')\n",
+    "    ])\n",
+    "], axis=0)\n",
+    "\n",
+    "cat_dtypes = {i: df_train[i].dtype for i in ['Annual_Premium_c', 'Age_c', 'Vintage_c', 'Region_Code_S', 'Policy_Sales_Channel_S', 'Annual_Premium_S'] + df_var.loc[df_var['dtype'] == 'Categorical'].index.tolist()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "cdb544d9-2785-40bc-a56f-c010dcc10228",
    "metadata": {},
    "outputs": [],
@@ -608,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "5d06b402-8cec-45f1-98ea-be7b121bba79",
    "metadata": {},
    "outputs": [],
@@ -630,6 +644,10 @@
     "df_test['Policy_Sales_Channel'] = dproc.replace_cat(df_test['Policy_Sales_Channel'], lambda x: float(x))\n",
     "df_test['Policy_Sales_Channel'] = dproc.rearrange_cat(df_test['Policy_Sales_Channel'].cat.as_ordered(), cat_dtypes['Policy_Sales_Channel'], repl_nearest)\n",
     "\n",
+    "df_test['Region_Code_S'] = dproc.replace_cat(df_test['Region_Code'], lambda x: str(x))\n",
+    "df_test['Policy_Sales_Channel_S'] = dproc.replace_cat(df_test['Policy_Sales_Channel'], lambda x: str(x))\n",
+    "df_test['Annual_Premium_S'] = dproc.replace_cat(df_test['Annual_Premium_c'], lambda x: str(x))\n",
+    "\n",
     "for i in ['Previously_Insured', 'Gender', 'Vehicle_Damage', 'Vehicle_Age']:\n",
     "    df_test[i] = df_test[i].astype(cat_dtypes[i])\n",
     "for n, vars in comb_cat_list:\n",
@@ -641,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "2edd850c-b66d-43a0-8b32-7bc2494e764c",
    "metadata": {},
    "outputs": [],
@@ -662,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "b1497cd3-7999-46f4-a7db-20b4498b50df",
    "metadata": {},
    "outputs": [],
@@ -672,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "821306f2-02a8-44cf-bad3-c214e70e202e",
    "metadata": {},
    "outputs": [
@@ -914,10 +932,10 @@
        "      <td>0.0</td>\n",
        "      <td>11504798.0</td>\n",
        "      <td>34945.00</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Categorical</td>\n",
        "      <td>categorize</td>\n",
        "    </tr>\n",
@@ -930,10 +948,10 @@
        "      <td>0.0</td>\n",
        "      <td>11504798.0</td>\n",
        "      <td>66.00</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Categorical</td>\n",
        "      <td>categorize</td>\n",
        "    </tr>\n",
@@ -946,10 +964,58 @@
        "      <td>0.0</td>\n",
        "      <td>11504798.0</td>\n",
        "      <td>290.00</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Categorical</td>\n",
+       "      <td>categorize</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Region_Code_S</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Region_Code_S 문자형 범주화</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11504798.0</td>\n",
+       "      <td>54.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Categorical</td>\n",
+       "      <td>categorize</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Policy_Sales_Channel_S</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Policy_Sales_Channel 범주화</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11504798.0</td>\n",
+       "      <td>152.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Categorical</td>\n",
+       "      <td>categorize</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Annual_Premium_S</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Annual_Premium 범주화</td>\n",
+       "      <td>2630.0</td>\n",
+       "      <td>540165.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11504798.0</td>\n",
+       "      <td>34945.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Categorical</td>\n",
        "      <td>categorize</td>\n",
        "    </tr>\n",
@@ -1406,6 +1472,9 @@
        "Annual_Premium_c                        NaN   \n",
        "Age_c                                   NaN   \n",
        "Vintage_c                               NaN   \n",
+       "Region_Code_S                           NaN   \n",
+       "Policy_Sales_Channel_S                  NaN   \n",
+       "Annual_Premium_S                        NaN   \n",
        "VA                                      NaN   \n",
        "VAge                                    NaN   \n",
        "PA                                      NaN   \n",
@@ -1450,6 +1519,9 @@
        "Annual_Premium_c                                            Annual_Premium을 범주화   \n",
        "Age_c                                                                  Age를 범주화   \n",
        "Vintage_c                                                         Vintange를 범주화   \n",
+       "Region_Code_S                                             Region_Code_S 문자형 범주화   \n",
+       "Policy_Sales_Channel_S                                 Policy_Sales_Channel 범주화   \n",
+       "Annual_Premium_S                                             Annual_Premium 범주화   \n",
        "VA                               Vehicle_Damage, Annual_Premium_c were combined   \n",
        "VAge                                        Vehicle_Damage, Age_c were combined   \n",
        "PA                            Previously_Insured, Annual_Premium_c were comb...   \n",
@@ -1494,6 +1566,9 @@
        "Annual_Premium_c              2630.0  540165.0  0.0  11504798.0    34945.00   \n",
        "Age_c                           20.0      85.0  0.0  11504798.0       66.00   \n",
        "Vintage_c                       10.0     299.0  0.0  11504798.0      290.00   \n",
+       "Region_Code_S                    NaN       NaN  0.0  11504798.0       54.00   \n",
+       "Policy_Sales_Channel_S         124.0       5.0  0.0  11504798.0      152.00   \n",
+       "Annual_Premium_S              2630.0  540165.0  0.0  11504798.0    34945.00   \n",
        "VA                               NaN       NaN  0.0  11504798.0    69833.00   \n",
        "VAge                             NaN       NaN  0.0  11504798.0      132.00   \n",
        "PA                               NaN       NaN  0.0  11504798.0    69839.00   \n",
@@ -1535,9 +1610,12 @@
        "Vintage                       True  True   True  False        Int16   \n",
        "Response (Dependent Feature)   NaN   NaN    NaN    NaN          NaN   \n",
        "is_Annual_Premium_mode        True  True   True   True         Int8   \n",
-       "Annual_Premium_c              True  True  False  False  Categorical   \n",
-       "Age_c                         True  True   True   True  Categorical   \n",
-       "Vintage_c                     True  True   True  False  Categorical   \n",
+       "Annual_Premium_c               NaN   NaN    NaN    NaN  Categorical   \n",
+       "Age_c                          NaN   NaN    NaN    NaN  Categorical   \n",
+       "Vintage_c                      NaN   NaN    NaN    NaN  Categorical   \n",
+       "Region_Code_S                  NaN   NaN    NaN    NaN  Categorical   \n",
+       "Policy_Sales_Channel_S         NaN   NaN    NaN    NaN  Categorical   \n",
+       "Annual_Premium_S               NaN   NaN    NaN    NaN  Categorical   \n",
        "VA                             NaN   NaN    NaN    NaN  Categorical   \n",
        "VAge                           NaN   NaN    NaN    NaN  Categorical   \n",
        "PA                             NaN   NaN    NaN    NaN  Categorical   \n",
@@ -1582,6 +1660,9 @@
        "Annual_Premium_c                      categorize  \n",
        "Age_c                                 categorize  \n",
        "Vintage_c                             categorize  \n",
+       "Region_Code_S                         categorize  \n",
+       "Policy_Sales_Channel_S                categorize  \n",
+       "Annual_Premium_S                      categorize  \n",
        "VA                            combine_categories  \n",
        "VAge                          combine_categories  \n",
        "PA                            combine_categories  \n",
@@ -1611,7 +1692,7 @@
        "VPRAc                         combine_categories  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
